refactor: refactored dbadapter

--- a/packages/nx-nest/src/schematics/application/files/config/custom-environment-variables.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/custom-environment-variables.yml.j2
@@ -20,12 +20,12 @@ database:
   host: DATABASE_HOST
   port: DATABASE_PORT
   database: DATABASE_NAME
-  {% if 'typeorm' in database -%}
+  {% if enum.dbAdapters.TYPEORM in database -%}
   type: DATABASE_TYPE
   username: DATABASE_USER
   password: DATABASE_PASSWORD
   migrationsTableName: DATABASE_MIGRATIONS_TABLE
-  {% elif 'mongoose' in database -%}
+  {% elif enum.dbAdapters.MONGOOSE in database -%}
   authentication:
     username: DATABASE_USER
     password: DATABASE_PASSWORD
