--- a/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
@@ -26,7 +26,7 @@ cacheLifetime:
 {% if database is defined and database != enum.database.NONE %}
 database:
   database: db
-  {% if 'typeorm' in database -%}
+  {% if enum.dbAdapters.TYPEORM in database -%}
   {% if  database == enum.database.TYPEORM_MYSQL -%}
   host: db-mysql
   type: mysql
@@ -47,7 +47,7 @@ database:
     entity: ./**/*.entity{.ts,.js}
     migration: migrations
     seed: seeds
-  {% elif 'mongoose' == database -%}
+  {% elif enum.dbAdapters.MONGOOSE == database -%}
   host: db-mongodb
   username: user
   password: secret
