--- a/packages/nx-nest/src/schematics/application/files/src/microservice-server/microservice-server.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/microservice-server/microservice-server.module.ts.j2
@@ -25,9 +25,9 @@ export function createMicroserviceModule ({% if database is defined and database
       }
     ],
     imports: [
-    {% if 'typeorm' in database %}
+    {% if enum.dbAdapters.TYPEORM in database %}
       TypeOrmModule.forRoot(getDatabaseOptions(mock)),
-      {% elif 'mongoose-mongodb' == database %}
+      {% elif enum.dbAdapters.MONGOOSE in database %}
       MongooseModule.forRoot(...getDatabaseOptions(mock)),
       {% endif %}
     ...Object.values(modules)
