docs: fix some documentation and readme

--- a/packages/nx-nest/src/schematics/application/files/tsconfig.json.j2
+++ b/packages/nx-nest/src/schematics/application/files/tsconfig.json.j2
@@ -2,6 +2,6 @@
   "extends": "../../tsconfig.base",
   "compilerOptions": {
   },
-  "include": ["src", "migrations", "seeds", "test"],
-  "exclude": ["node_modules"]
+  "include": ["src", "migrations", "seeds"],
+  "exclude": ["node_modules", "**/*.spec.ts", "tests"]
 }
