--- a/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.controller.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.controller.ts.j2
@@ -1,15 +1,15 @@
-import { AuthServiceRequests, AuthServiceRequestsTypes } from '@fullctrl/be-common'
 import { Controller } from '@nestjs/common'
 import { MessagePattern } from '@nestjs/microservices'
-
-import { DefaultMicroservice } from './__default__.service'
+import { App1Message, App1MessagePattern, MessageQueueMap } from '@{{ packageScope }}/{{ constants.MICROSERVICE_PROVIDER_PACKAGE }}'
+import { DefaultMicroservice } from './default.service'
 
 @Controller()
 export class DefaultMicrocontroller {
   constructor (private defaultMicroService: DefaultMicroservice) {}
 
-  @MessagePattern(AuthServiceRequests.authenticate)
-  public default (options: AuthServiceRequestsTypes['authenticate']['request']): Promise<AuthServiceRequestsTypes['authenticate']['response']> {
+  {# fix this later #}
+  @MessagePattern(App1MessagePattern.APP1_DEFAULT)
+  public default (options: any): Promise<any> {
     return this.defaultMicroService.default(options)
   }
 }
