--- a/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.controller.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.controller.ts.j2
@@ -4,7 +4,7 @@ import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger'
 import { {{ casing.pascal }}Service } from './{{ name }}.service'
 
 @ApiTags('{{ casing.pascal }}')
-@Controller()
+@Controller('{{ mount }}')
 export class {{ casing.pascal }}Controller {
   constructor (private readonly {{ casing.camel }}Service: {{ casing.pascal }}Service) {}
 
