--- a/packages/nx-nest/src/schematics/microservice-provider/files/src/microservice-provider.module.ts.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/src/microservice-provider.module.ts.j2
@@ -1,9 +1,10 @@
-import { Module } from '@nestjs/common'
+import { Global, Module } from '@nestjs/common'
 
 import { MessageQueueEnum } from './microservice-provider.constants'
 import { MicroserviceProviderService } from './microservice-provider.service'
 import { provideMessageQueueClient } from './utils/microservice-client.util'
 
+@Global()
 @Module({
   providers: [
     MicroserviceProviderService,
