--- a/packages/nx-nest/src/schematics/application/files/config/custom-environment-variables.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/custom-environment-variables.yml.j2
@@ -1,3 +1,6 @@
+{% if server is defined %}
+port: API_PORT
+{% endif %}
 logLevel: LOG_LEVEL
 
 misc:
@@ -5,29 +8,38 @@ misc:
   lastUpdateFile: LAST_UPDATE_FILE
   maintenanceNotification: MAINTENANCE_MESSAGE
 
+{% if server is defined %}
 url:
   basePath: BASE_URL
   apiPath: API_BASE_PATH
 
+{% if server == enum.server.RESTFUL %}
 swagger:
   useHttps:
     __name: USE_HTTPS
     __format: json
   basePath: API_BASE_PATH
+{% endif %}
+{% endif %}
 
 {% if database is defined and database != enum.database.NONE %}
 database:
   host: DATABASE_HOST
   port: DATABASE_PORT
   database: DATABASE_NAME
-  {% if enum.dbAdapters.TYPEORM in database -%}
+{% if enum.dbAdapters.TYPEORM in database %}
   type: DATABASE_TYPE
   username: DATABASE_USER
   password: DATABASE_PASSWORD
   migrationsTableName: DATABASE_MIGRATIONS_TABLE
-  {% elif enum.dbAdapters.MONGOOSE in database -%}
+{% elif enum.dbAdapters.MONGOOSE in database %}
   authentication:
     username: DATABASE_USER
     password: DATABASE_PASSWORD
-  {% endif -%}
+{% endif %}
+{% endif %}
+
+{% if microservice is defined %}
+messageQueue:
+  urls: MESSAGE_QUEUE_URLS
 {% endif %}
