feat: started brownie finished microservices

--- a/packages/nx-nest/src/schematics/application/files/src/constants.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/constants.ts.j2
@@ -1,4 +1,4 @@
-{% if components | length != 1 %}
+{% if effectiveComponents != 1 %}
 export enum Service {
   {% if enum.components.SERVER in components %}
   SERVER = 'server',
