--- a/packages/nx-nest/src/schematics/microservice-provider/files/src/microservice-provider.constants.ts.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/src/microservice-provider.constants.ts.j2
@@ -10,6 +10,7 @@ import {
 {% endfor %}
 } from './interfaces'
 {% endif %}
+import { MicroserviceProviderService } from '@webundsoehne/nestjs-util'
 
 
 export enum MessageQueues {
