--- a/packages/nx-nest/src/schematics/application/files/src/main.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/main.ts.j2
@@ -1,4 +1,4 @@
-{% if components | length != 1 %}
+{% if effectiveComponents != 1 %}
 import { InternalServerErrorException } from '@nestjs/common'
 
 import { Service } from './constants'
@@ -18,34 +18,34 @@ import { createApplication as createCommandApplication } from './command/init'
 {% endif %}
 
 function bootstrap (): Promise<void> {
-  {% if components | length != 1 %}
+  {% if effectiveComponents != 1 %}
   switch (String(process.env.NODE_SERVICE).toLowerCase()) {
   {% endif %}
   {% if enum.components.SERVER in components %}
-  {% if components | length != 1 %}
+  {% if effectiveComponents != 1 %}
   case Service.SERVER:
   {% endif %}
     return createServerApplication()
   {% endif %}
   {% if enum.components.MICROSERVICE_SERVER in components %}
-  {% if components | length != 1 %}
+  {% if effectiveComponents != 1 %}
   case Service.MICROSERVICE_SERVER:
   {% endif %}
     return createMicroserviceApplication()
   {% endif %}
   {% if enum.components.BG_TASK in components %}
-  {% if components | length != 1 %}
+  {% if effectiveComponents != 1 %}
   case Service.TASK:
   {% endif %}
     return createTaskApplication()
   {% endif %}
   {% if enum.components.COMMAND in components %}
-  {% if components | length != 1 %}
+  {% if effectiveComponents != 1 %}
   case Service.COMMAND:
   {% endif %}
     return createCommandApplication()
   {% endif %}
-  {% if components | length != 1 %}
+  {% if effectiveComponents != 1 %}
   default:
     throw new InternalServerErrorException('NODE_SERVICE environment variable is not set.')
   }
