--- a/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.controller.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.controller.ts.j2
@@ -1,17 +1,17 @@
 import { Controller } from '@nestjs/common'
 import { MessagePattern } from '@nestjs/microservices'
 
-import { {{ casing.inject.microservices.interface }}, {{ casing.inject.microservices.pattern }}  } from '@{{ packageScope }}/{{ constants.MICROSERVICE_PROVIDER_PACKAGE }}'
+import { {{ casing.injected.microservices.names.interface }}, {{ casing.injected.microservices.names.pattern }}  } from '@{{ packageScope }}/{{ constants.MICROSERVICE_PROVIDER_PACKAGE }}'
 import { DefaultMicroservice } from './{{ name }}.service'
 
 @Controller()
 export class {{ casing.pascal }}Microcontroller {
   constructor (private readonly {{ casing.camel }}Microservice: {{ casing.pascal }}Microservice) {}
 
-  @MessagePattern({{ casing.inject.microservices.pattern }}.{{ casing.inject.microservices.default }})
+  @MessagePattern({{ casing.injected.microservices.names.pattern }}.{{ casing.injected.microservices.names.default }})
   public default (
-    options: {{ casing.inject.microservices.interface }}[{{ casing.inject.microservices.pattern }}.{{ casing.inject.microservices.default }}]['request']
-  ): Promise<{{ casing.inject.microservices.interface }}[{{ casing.inject.microservices.pattern }}.{{ casing.inject.microservices.default }}]['response']> {
+    options: {{ casing.injected.microservices.names.interface }}[{{ casing.injected.microservices.names.pattern }}.{{ casing.injected.microservices.names.default }}]['request']
+  ): Promise<{{ casing.injected.microservices.names.interface }}[{{ casing.injected.microservices.names.pattern }}.{{ casing.injected.microservices.names.default }}]['response']> {
     return this.{{ casing.camel }}Microservice.default(options)
   }
 }
