--- a/packages/nx-nest/src/schematics/microservice-provider/files/src/interfaces/__interface__.interface.ts.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/src/interfaces/__interface__.interface.ts.j2
@@ -1,13 +1,13 @@
 {# Since this is a multiple jinja template this uses only the 'microservice' part of the variables. #}
-import { MicroserviceProviderBaseMessage } from '../microservice-provider.interface'
+import { MicroserviceProviderBaseMessage } from '@webundsoehne/nestjs-util'
 import { {{ names.pattern }} } from '../patterns'
 
 /**
  * Message patterns for "{{ name }}" with pattern "{{ names.pattern }}"
  */
 export declare class {{ names.interface }} implements MicroserviceProviderBaseMessage<typeof {{ names.pattern }}> {
-  [{{ names.pattern }}.{{ casing.default }}]: {
-    response?: any | never
-    request?: any | never
+  [{{ names.pattern }}.{{ names.default }}]: {
+    response: any | never
+    request: any | never
   }
 }
