--- a/packages/nx-nest/src/schematics/application/files/src/server/server.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/server/server.module.ts.j2
@@ -23,9 +23,9 @@ import {
   {% endif %}
   SetApiInfoHeaderMiddleware,
   setEnvironmentVariables,
-  ExtendedValidationPipe
+  ExtendedValidationPipe,
   {% if enum.components.MICROSERVICE_CLIENT in components %}
-  MicroserviceProviderModule
+  MicroserviceProviderModule,
   {% endif %}
 } from '@webundsoehne/nestjs-util'
 {% if enum.components.MICROSERVICE_CLIENT in components %}
