--- a/packages/brownie/templates/containers/mongodb/docker-compose.yml.j2
+++ b/packages/brownie/templates/containers/mongodb/docker-compose.yml.j2
@@ -1,17 +1,17 @@
 services:
-  mongo:
+  db-mongo:
     {% filter indent(4, true) %}
       {% set image = 'mongo:latest' %}
-      {% include '../common/image.yml.j2' %}
+      {% include '../../base/image.yml.j2' %}
     {% endfilter %}
 
     command: --directoryperdb
     {% filter indent(4, true) %}
-      {% include '../common/env.yml.j2' %}
+      {% include '../../base/env.yml.j2' %}
     {% endfilter %}
 
     ports:
       - 27017:27017
     {% filter indent(4, true) %}
-      {% include '../common/volumes.yml.j2' %}
+      {% include '../../base/volumes.yml.j2' %}
     {% endfilter %}
