--- a/packages/nx-nest/src/schematics/application/files/src/task/task.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/task/task.module.ts.j2
@@ -9,7 +9,7 @@ import { MongooseModule } from '@nestjs/mongoose'
 import {
   ConfigService,
   {% if enum.components.MICROSERVICE_CLIENT in components %}
-  MicroserviceProviderModule
+  MicroserviceProviderModule,
   {% endif %}
 } from '@webundsoehne/nestjs-util'
 
